--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,8 @@
-absl-py==2.3.0
-altgraph @ file:///AppleInternal/Library/BuildRoots/39d9dc1a-2111-11f0-be06-226177e5bb69/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
-astunparse==1.6.3
-blinker==1.9.0
-certifi==2022.9.24
-charset-normalizer==2.1.1
-click==8.1.8
-cloudpickle==3.1.1
-contourpy==1.3.0
-cycler==0.12.1
-dash==3.0.4
-dash-bootstrap-components==2.0.3
-faiss-cpu==1.11.0
-Farama-Notifications==0.0.4
-filelock==3.18.0
-Flask==3.0.3
-flatbuffers==25.2.10
-fonttools==4.58.4
-fsspec==2025.5.1
-future @ file:///AppleInternal/Library/BuildRoots/39d9dc1a-2111-11f0-be06-226177e5bb69/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.73.0
-gym==0.26.2
-gym-notices==0.0.8
-gymnasium==1.1.1
-h5py==3.14.0
-hf-xet==1.1.5
-huggingface-hub==0.33.0
-idna==3.4
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.5.1
-keras==3.10.0
-kiwisolver==1.4.7
-libclang==18.1.1
-macholib @ file:///AppleInternal/Library/BuildRoots/39d9dc1a-2111-11f0-be06-226177e5bb69/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
-Markdown==3.8.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.4
-mdurl==0.1.2
-ml_dtypes==0.5.1
-mpmath==1.3.0
-namex==0.1.0
-narwhals==1.44.0
-nest-asyncio==1.6.0
-networkx==3.2.1
-nltk==3.9.1
-numpy==2.0.2
-opt_einsum==3.4.0
-optree==0.16.0
-packaging==25.0
-pandas==2.3.0
-pillow==11.2.1
-plotly==6.1.2
-protobuf==5.29.5
-Pygments==2.19.2
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-pytz==2025.2
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.28.1
-retrying==1.3.5
-rich==14.0.0
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.13.1
-seaborn==0.13.2
-sentence-transformers==4.1.0
-Shimmy==2.0.0
-six @ file:///AppleInternal/Library/BuildRoots/39d9dc1a-2111-11f0-be06-226177e5bb69/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
-stable_baselines3==2.6.0
-sympy==1.14.0
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==3.1.0
-textblob==0.19.0
-tf_keras==2.19.0
-threadpoolctl==3.6.0
-tokenizers==0.21.2
-torch==2.7.1
-tqdm==4.67.1
-transformers==4.52.4
-typing_extensions==4.14.0
-tzdata==2025.2
-urllib3==1.26.13
-Werkzeug==3.0.6
-wordcloud==1.9.4
-wrapt==1.17.2
-zipp==3.23.0
+Flask
+gunicorn
+dash
+dash-bootstrap-components
+pandas
+numpy
+plotly
+requests
